fixed margin top on mobile width

--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ h3 {
 @media (max-width: 523px) {
     section {
         width: 90%;
+        margin-top: -10rem;
     }
 
     .info {
